fix sidebar width and fix broken main overlap

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   color: var(--color-text-primary);
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 220px 1fr;
 }
 
 h1{
@@ -204,7 +204,6 @@ a:hover{
 
 .sidebar{
   z-index: 1;
-  min-width: 150px;
   background-color: #105b7c;
   color: white;
   font-weight: 700;
